app/styles/header.scss
header.main-header {
  height: 48px;
  background: #4a4a4a;
  color: #e4e4e4;
  display: flex;

  .mktLink  {
    width: 32px;
    height: 32px;
    position: absolute;
    right: 16px;
    top: 8px;
    background-image: url(/images/swagger-sprite.png);
    background-repeat: no-repeat;
    background-position: 0px 0px;
    &:hover {
      transition: background-position ease 200ms;
      background-position: 0px -33px;
    }
  }

  >h1 {
    padding: 4px .3em 0 1em;
    font-size: 22px;
    line-height: 46px;
    letter-spacing: .3px;
    text-transform: lowercase;
    font-family: "Droid Sans";
    font-weight: 700;
    span {
      font-weight: 300;
    }
  }

  .toolbar {
    padding: .8em;
    font-size: .8em;

    button {
      border: none;
      background: white;
    }

    &.panel-switcher {
      position: absolute;
      right: 50px;
      a {
        margin-right: .3em;
        text-decoration: none;
        font-size: 10px;
        cursor: pointer;
        transition: color ease-in-out 100ms;
        &.active {
          color: #000;
        }
      }
    }
  }

  .generation {
    display: none;
  }
}

header.editor-header {
  .toolbar{
    overflow: hidden;
    padding: 0 15px 5px 15px;
    background: #252525;
    section {
      &.left {
        float: left;
      }
      &.right {
        float: right;
      }
    }

    .btn-drawer {
      display: inline-block;
      position: relative;
      .buttons{
        display: none;
        position: absolute;
        width: 100%;
        top: 100%;
        left: 0;
        z-index: 5;
        background: #333333;
        margin: 0;
      }
      &:hover .buttons{
        display: block;
      }
    }
    .toolbar-btn {
      display: inline-block;
      border: 1px solid gray;
      border-radius: 3px;
      text-align: center;
      color: #808080;
      text-decoration: none;
      font-size: 13px;
      margin-top: 5px;
      height: 26px;
      outline: none;
      cursor: pointer;
      background: #252525;
      min-width: 104px;
      &:hover {
        color: #444;
        text-decoration: none;
        border-radius: 3px;
        background: #383838;
      }
      span {
        font-size: .5em;
        float: right;
        margin-right: 3px;
        margin-top: 4px;
      }

      &.menu-button {
        display: display;
        border: none;
      }
      &:hover {
        color: #8a8a8a;
        background: #3d3d3d;
        transition: background 0.2s ease;
      }
      &.actionBtn {
        color: #444;
        line-height: 26px;
        padding: 0;
        margin-top: 2px;
        text-decoration: none;
        background: #D4D4D4;
        border: 1px solid #949494;
        border-radius: 0px;
        margin-bottom: -3px;
        &:hover {
          background: #bdbdbd;
          color: #383838;
        }
        &.actionBtn:first-child {
          border-radius: 3px 3px 0 0;
        }
        &.actionBtn:last-child {
          border-radius: 0 0 3px 3px;
        }
      }
    }
  }
}

